# dfcx-scrapi

./: .gitignore  .gitlab-ci.yml  .pylintrc  LICENSE.txt  Makefile  Makefile_copy  README.md  config.yaml  pyproject.toml  pytest.ini  requirements.txt  setup.cfg  setup.py
.github/ISSUE_TEMPLATE/: bug-report.md  bug_report.md  feature-request.md  feature_request.md  pull-request.md
builders/: intent.py
core/: agents.py  conversation.py  entity_types.py  experiments.py  flows.py  intents.py  maker_util.py  mega_agent.py  operations.py  pages.py  sapi_base.py  scrapi_base.py  sessions.py  transition_route_groups.py  webhooks.py
data/: get_weather_tool.py  google_cloud_dialogflow_v3alpha1-0.0.0-py3-none-any.whl  intent_sample_params.csv  intent_sample_with_parts.csv  nlu_evals_sample.csv  sample_agent.blob  sample_intent_tp.csv  sample_test_cases.blob
data/final/: test.tsv  (+1 more)
dfcx/: Makefile  dataframe_fxns.py  dfcx.py  dfcx_client.py  dfcx_functions.py  dfcx_validation.py  pyproject.toml
examples/: agent_backups.ipynb  bot_building_101.ipynb  compare_intent_tp_data.ipynb  copy_paste_pages.ipynb  gsheets_to_cx.ipynb  scrapi_prebuilt.ipynb  template.ipynb  vertex_ai_conversation_evaluation_tool.ipynb
soop/: project.py
src/: builders_101.ipynb
tests/: conftest.py  search_util_test.py  test_agent_checker_util.py  test_agents.py  test_search_util.py
tools/: __init__.py  change_history.py  copy_util.py  dataframe_functions.py  dataframe_fxns.py  dfcx_client.py  dfcx_validation.py  maker_util.py  search_util.py  stats_util.py  validation_kit.py  webhook_utils.py
(+220 files in other folders)
