[build-system]
requires = ["setuptools>=42", "setuptools-scm", "wheel"]
build-backend = "setuptools.build_meta"

[tool.ruff]
line-length = 80
extend-exclude = ["tests", "*.ipynb"]

[tool.ruff.lint]
select = [
    "E", # pycodestyle
    "F", # Pyflakes
    "I", # isort
    "W"  # warn
    ]
ignore = []

[tool.ruff.format]
quote-style = "double"
indent-style = "tab"
